--- a/src/styles.css
+++ b/src/styles.css
@@ -11,15 +11,20 @@ body {
   background-color: rgb(30, 35, 44);
   display: flex;
   flex-direction: column;
-  width: 350px;
-  height: 350px;
-  padding: 20px;
+  width: 20rem;
+  height: 23rem;
+  padding: 1.5rem;
   border-radius: 20px;
 }
 .App-submitted {
   text-align: center;
   display: flex;
   align-items: center;
+  padding-bottom: 40px;
+}
+
+.App-submitted h1 {
+  margin: 0.5rem;
 }
 
 .ratings-form {
@@ -37,8 +42,8 @@ body {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 32px;
-  height: 32px;
+  width: 2rem;
+  height: 2rem;
   background: rgb(40, 46, 55);
   border-radius: 50%;
   border: none;
@@ -66,8 +71,8 @@ button {
   border: none;
   outline: none;
   border-radius: 50px;
-  margin: 1.5em;
-  height: 36px;
+  margin: 1.5rem;
+  height: 2rem;
   color: white;
 }
 
@@ -77,7 +82,7 @@ button:hover {
 }
 
 img {
-  width: 250px;
+  width: 15rem;
   border-radius: 20px;
 }
 
